[package]
name = "rtc_turn_server"
version = "0.1.0"
edition = "2021"
authors = ["fideojlin@gmail.com"]
description = "A TURN server for real-time communication"

[dependencies]
util = { package = "webrtc-util", version = "0.5.4", default-features = false, features = ["conn"] }
tokio = { version = "1.19", features = ["full"] }
thiserror = "1.0"
log = "0.4"
env_logger = "0.9.0"
num_cpus = "0.2"
net2 = "0.2"